dataTable 페이징 시작 번호와 마지막 번호 미세 조정 및 UI 수정

--- a/dataTable.css
+++ b/dataTable.css
@@ -48,20 +48,20 @@
 }
 
 .navStyle-centered {
-    position: absolute;
-    margin: 0 5%;
+    /*position: absolute;*/
+    /*margin: 0 5%;*/
 }
 
 .navStyle-left a{
-    float: left;
+    /*float: left;*/
 }
 
 .navStyle-centered a {
-    float: none;
+    /*float: none;*/
 }
 
 .navStyle-right a {
-    float: right;
+    /*float: right;*/
 }
 
 .nav-page-item {
